#S2SG-22 fixed main component overlapping with the header issue

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -4,6 +4,10 @@
   justify-content: space-between;
   height: 80px;
   padding: 20px;
+  position: fixed;
+  top: 0;
+  left: 22%;
+  right: 22%;
 }
 
 .headerLogoLink {
